--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,9 @@ service: stepy
 # Check out our docs for more details
 # frameworkVersion: "=X.X.X"
 
+plugins:
+  - serverless-step-functions
+
 provider:
   name: aws
   runtime: python3.6
@@ -107,6 +110,27 @@ resources:
               Principal:
                 Service: lambda.amazonaws.com
               Action: "sts:AssumeRole"
+    StatesExecutionRole:
+      Type: "AWS::IAM::Role"
+      Properties:
+        AssumeRolePolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: "Allow"
+              Principal:
+                Service:
+                  - states.us-east-1.amazonaws.com
+              Action: "sts:AssumeRole"
+        Path: "/"
+        Policies:
+          - PolicyName: StatesExecutionPolicy
+            PolicyDocument:
+              Version: "2012-10-17"
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - "lambda:InvokeFunction"
+                  Resource: "*"
 
 # you can add CloudFormation resource templates here
 #resources:
