--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "serverless-offline-python": "^3.14.2",
+    "serverless-pseudo-parameters": "^1.4.2",
     "serverless-step-functions": "^1.3.0"
   }
 }
